--- a/LibraryApp/appsettings.json
+++ b/LibraryApp/appsettings.json
@@ -7,6 +7,7 @@
   },
     "AllowedHosts": "*",
     "ConnectionStrings": {
+        //"LibrarySystemDbConnectionString": "Server=librarydatabase.c5qe2yuk4ag1.us-east-1.rds.amazonaws.com,1433;Initial Catalog=LibrarySystemDb ;Persist Security Info=False;User ID=admin;Password=aoG7yeVokD7sSNFBNvAP;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;"
         "LibrarySystemDbConnectionString": "Server=TBG-KEN-DTP-071;Database=LibrarySystemDb;Trusted_Connection=Yes;TrustServerCertificate=Yes"
     }
 }
